// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feedback Basic (sends user information as \`crocsfan19\`) renders as expected 1`] = `
<div
  className="bg-gray-faint py12 px18 round color-gray"
>
  <div>
    <div>
      <div
        className="mb6"
      >
        Was this 
        page
         helpful?
      </div>
      <button
        className="btn btn--s"
        id="dr-ui--feedback-lnglat-yes"
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="btn btn--s ml6"
        id="dr-ui--feedback-lnglat-no"
        onClick={[Function]}
      >
        No
      </button>
    </div>
  </div>
</div>
`;

exports[`feedback Change type (sends anonymous user information) renders as expected 1`] = `
<div
  className="bg-gray-faint py12 px18 round color-gray"
>
  <div>
    <div>
      <div
        className="mb6"
      >
        Was this 
        section
         helpful?
      </div>
      <button
        className="btn btn--s"
        id="dr-ui--feedback-page-yes"
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        className="btn btn--s ml6"
        id="dr-ui--feedback-page-no"
        onClick={[Function]}
      >
        No
      </button>
    </div>
  </div>
</div>
`;
